Fix css to stretch map over whole pane

--- a/spielplatz/css/custom.css
+++ b/spielplatz/css/custom.css
@@ -14,8 +14,10 @@ and open the template in the editor.
 
 #map {
     width: 100%;
+    height: 100%;
     min-height: 800px;
     z-index: 0;
+    position: absolute;
 }
 
 .container {
@@ -186,8 +188,8 @@ th {
     width: 100%;
     height: 100%;
     background-color: #3D3D3D;
-    position: absolute; 
-    top: 0; 
+    position: absolute;
+    top: 0;
     left: 0;
     color: #FFF;
 }
